[package]
name = "esp32-nimble"
version = "0.6.1"
authors = ["taks <857tn859@gmail.com>"]
edition = "2021"
resolver = "2"
repository = "https://github.com/taks/esp32-nimble"
license = "Apache-2.0"
description = "A wrapper for the ESP32 NimBLE Bluetooth stack."
readme = "README.md"
keywords = ["bluetooth", "ble", "esp32", "embedded", "async"]
categories = ["embedded", "hardware-support"]
documentation = "https://taks.github.io/esp32-nimble/esp32_nimble/index.html"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["std"]

std = ["esp-idf-svc/std", "esp-idf-hal/std", "once_cell/std", "bstr/std"]
no_std = ["once_cell/critical-section", "esp-idf-hal/critical-section", "bstr/alloc"]
debug = []

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-hal = { git = "https://github.com/Catchawink/esp-idf-hal.git", branch = "master", default-features = false, features = ["embassy-sync"] }
esp-idf-svc = { git = "https://github.com/Catchawink/esp-idf-svc.git", branch = "master", default-features = false, features = ["alloc"] }
esp-idf-sys = { git = "https://github.com/Catchawink/esp-idf-sys.git", branch = "master", default-features = false }
embedded-svc = { version = "0.28.0", default-features = false, features = ["experimental"] }

bitflags = { version = "2.4.1" }
bstr = { version = "1.8.0", default-features = false }
embassy-sync = { version = "0.6" }
heapless = "0.8.0"
num_enum = { version = "0.7", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
uuid = { version = "1", default-features = false, features = ["macro-diagnostics"] }

[dev-dependencies]
anyhow = "1"
esp-idf-sys = { git = "https://github.com/Catchawink/esp-idf-sys.git", branch = "master", default-features = false, features = ["binstart", "alloc_handler"] }

[build-dependencies]
anyhow = "1"
embuild = { git = "https://github.com/Catchawink/embuild.git", branch = "master" }